pick a number working art gallery html added

--- a/starter-code/views/index.html
+++ b/starter-code/views/index.html
@@ -9,7 +9,7 @@
   <body>
     <h2>Pick a Number!</h2>
     <p id="high-low-correct"></p>
-    <form id="guess-number-form">
+    <form id="guess-number-form" method="POST" action="http://localhost:3000">
       <input id="guess-num" name="number" placeholder="guess a number" type="text" />
       <input type="submit" />
     </form>
